# Generated by Django 5.1.4 on 2026-03-30 14:57

import django.db.models.deletion
import simple_history.models
from django.conf import settings
from django.db import migrations, models


class Migration(migrations.Migration):

    initial = True

    dependencies = [
        migrations.swappable_dependency(settings.AUTH_USER_MODEL),
    ]

    operations = [
        migrations.CreateModel(
            name='Almacenamiento',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('capacidad', models.CharField(help_text='Ejemplo: 256GB SSD, 1TB HDD, 512GB NVMe', max_length=100, unique=True, verbose_name='Almacenamiento')),
            ],
            options={
                'verbose_name': 'Almacenamiento',
                'verbose_name_plural': 'Almacenamientos',
                'ordering': ['capacidad'],
            },
        ),
        migrations.CreateModel(
            name='Area',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('nombre', models.CharField(max_length=100, unique=True, verbose_name='Nombre del área')),
                ('descripcion', models.TextField(blank=True, default='', verbose_name='Descripción')),
            ],
            options={
                'verbose_name': 'Área',
                'verbose_name_plural': 'Áreas',
                'ordering': ['nombre'],
            },
        ),
        migrations.CreateModel(
            name='Marca',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('nombre', models.CharField(max_length=100, unique=True, verbose_name='Nombre de la marca')),
            ],
            options={
                'verbose_name': 'Marca',
                'verbose_name_plural': 'Marcas',
                'ordering': ['nombre'],
            },
        ),
        migrations.CreateModel(
            name='Procesador',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('nombre', models.CharField(max_length=150, unique=True, verbose_name='Procesador')),
            ],
            options={
                'verbose_name': 'Procesador',
                'verbose_name_plural': 'Procesadores',
                'ordering': ['nombre'],
            },
        ),
        migrations.CreateModel(
            name='Ram',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('capacidad', models.CharField(help_text='Ejemplo: 8GB, 16GB, 32GB', max_length=50, unique=True, verbose_name='Capacidad de RAM')),
            ],
            options={
                'verbose_name': 'RAM',
                'verbose_name_plural': 'Memorias RAM',
                'ordering': ['capacidad'],
            },
        ),
        migrations.CreateModel(
            name='Empleado',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('nombre', models.CharField(max_length=200, verbose_name='Nombre completo')),
                ('email', models.EmailField(max_length=254, unique=True, verbose_name='Correo electrónico')),
                ('cargo', models.CharField(max_length=150, verbose_name='Cargo o puesto')),
                ('activo', models.BooleanField(default=True, help_text='Desmarque esta opción si el empleado ya no trabaja en la empresa.', verbose_name='Empleado activo')),
                ('area', models.ForeignKey(on_delete=django.db.models.deletion.PROTECT, related_name='empleados', to='inventory.area', verbose_name='Área')),
            ],
            options={
                'verbose_name': 'Empleado',
                'verbose_name_plural': 'Empleados',
                'ordering': ['nombre'],
            },
        ),
        migrations.CreateModel(
            name='Modelo',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('nombre', models.CharField(max_length=150, verbose_name='Nombre del modelo')),
                ('marca', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='modelos', to='inventory.marca', verbose_name='Marca')),
            ],
            options={
                'verbose_name': 'Modelo',
                'verbose_name_plural': 'Modelos',
                'ordering': ['marca__nombre', 'nombre'],
            },
        ),
        migrations.CreateModel(
            name='Laptop',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('numero_serie', models.CharField(max_length=100, unique=True, verbose_name='Número de serie')),
                ('estado', models.CharField(choices=[('activo', 'Activo'), ('en_reparacion', 'En Reparación'), ('de_baja', 'De Baja')], default='activo', max_length=20, verbose_name='Estado')),
                ('fecha_ingreso', models.DateField(auto_now_add=True, verbose_name='Fecha de ingreso')),
                ('notas', models.TextField(blank=True, default='', verbose_name='Notas adicionales')),
                ('almacenamiento', models.ForeignKey(on_delete=django.db.models.deletion.PROTECT, related_name='laptops', to='inventory.almacenamiento', verbose_name='Almacenamiento')),
                ('empleado_asignado', models.ForeignKey(blank=True, help_text='Dejar en blanco si el equipo está en bodega.', null=True, on_delete=django.db.models.deletion.SET_NULL, related_name='laptops', to='inventory.empleado', verbose_name='Empleado asignado')),
                ('marca', models.ForeignKey(on_delete=django.db.models.deletion.PROTECT, related_name='laptops', to='inventory.marca', verbose_name='Marca')),
                ('modelo', models.ForeignKey(on_delete=django.db.models.deletion.PROTECT, related_name='laptops', to='inventory.modelo', verbose_name='Modelo')),
                ('procesador', models.ForeignKey(on_delete=django.db.models.deletion.PROTECT, related_name='laptops', to='inventory.procesador', verbose_name='Procesador')),
                ('ram', models.ForeignKey(on_delete=django.db.models.deletion.PROTECT, related_name='laptops', to='inventory.ram', verbose_name='RAM')),
            ],
            options={
                'verbose_name': 'Laptop',
                'verbose_name_plural': 'Laptops',
                'ordering': ['-fecha_ingreso'],
            },
        ),
        migrations.CreateModel(
            name='HistoricalLaptop',
            fields=[
                ('id', models.BigIntegerField(auto_created=True, blank=True, db_index=True, verbose_name='ID')),
                ('numero_serie', models.CharField(db_index=True, max_length=100, verbose_name='Número de serie')),
                ('estado', models.CharField(choices=[('activo', 'Activo'), ('en_reparacion', 'En Reparación'), ('de_baja', 'De Baja')], default='activo', max_length=20, verbose_name='Estado')),
                ('fecha_ingreso', models.DateField(blank=True, editable=False, verbose_name='Fecha de ingreso')),
                ('notas', models.TextField(blank=True, default='', verbose_name='Notas adicionales')),
                ('history_id', models.AutoField(primary_key=True, serialize=False)),
                ('history_date', models.DateTimeField(db_index=True)),
                ('history_change_reason', models.CharField(max_length=100, null=True)),
                ('history_type', models.CharField(choices=[('+', 'Created'), ('~', 'Changed'), ('-', 'Deleted')], max_length=1)),
                ('almacenamiento', models.ForeignKey(blank=True, db_constraint=False, null=True, on_delete=django.db.models.deletion.DO_NOTHING, related_name='+', to='inventory.almacenamiento', verbose_name='Almacenamiento')),
                ('empleado_asignado', models.ForeignKey(blank=True, db_constraint=False, help_text='Dejar en blanco si el equipo está en bodega.', null=True, on_delete=django.db.models.deletion.DO_NOTHING, related_name='+', to='inventory.empleado', verbose_name='Empleado asignado')),
                ('history_user', models.ForeignKey(null=True, on_delete=django.db.models.deletion.SET_NULL, related_name='+', to=settings.AUTH_USER_MODEL)),
                ('marca', models.ForeignKey(blank=True, db_constraint=False, null=True, on_delete=django.db.models.deletion.DO_NOTHING, related_name='+', to='inventory.marca', verbose_name='Marca')),
                ('modelo', models.ForeignKey(blank=True, db_constraint=False, null=True, on_delete=django.db.models.deletion.DO_NOTHING, related_name='+', to='inventory.modelo', verbose_name='Modelo')),
                ('procesador', models.ForeignKey(blank=True, db_constraint=False, null=True, on_delete=django.db.models.deletion.DO_NOTHING, related_name='+', to='inventory.procesador', verbose_name='Procesador')),
                ('ram', models.ForeignKey(blank=True, db_constraint=False, null=True, on_delete=django.db.models.deletion.DO_NOTHING, related_name='+', to='inventory.ram', verbose_name='RAM')),
            ],
            options={
                'verbose_name': 'historical Laptop',
                'verbose_name_plural': 'historical Laptops',
                'ordering': ('-history_date', '-history_id'),
                'get_latest_by': ('history_date', 'history_id'),
            },
            bases=(simple_history.models.HistoricalChanges, models.Model),
        ),
        migrations.CreateModel(
            name='HistoricalCelular',
            fields=[
                ('id', models.BigIntegerField(auto_created=True, blank=True, db_index=True, verbose_name='ID')),
                ('imei', models.CharField(db_index=True, max_length=20, verbose_name='IMEI')),
                ('numero_serie', models.CharField(db_index=True, max_length=100, verbose_name='Número de serie')),
                ('estado', models.CharField(choices=[('activo', 'Activo'), ('en_reparacion', 'En Reparación'), ('de_baja', 'De Baja')], default='activo', max_length=20, verbose_name='Estado')),
                ('fecha_ingreso', models.DateField(blank=True, editable=False, verbose_name='Fecha de ingreso')),
                ('notas', models.TextField(blank=True, default='', verbose_name='Notas adicionales')),
                ('history_id', models.AutoField(primary_key=True, serialize=False)),
                ('history_date', models.DateTimeField(db_index=True)),
                ('history_change_reason', models.CharField(max_length=100, null=True)),
                ('history_type', models.CharField(choices=[('+', 'Created'), ('~', 'Changed'), ('-', 'Deleted')], max_length=1)),
                ('almacenamiento', models.ForeignKey(blank=True, db_constraint=False, null=True, on_delete=django.db.models.deletion.DO_NOTHING, related_name='+', to='inventory.almacenamiento', verbose_name='Almacenamiento')),
                ('empleado_asignado', models.ForeignKey(blank=True, db_constraint=False, help_text='Dejar en blanco si el equipo está en bodega.', null=True, on_delete=django.db.models.deletion.DO_NOTHING, related_name='+', to='inventory.empleado', verbose_name='Empleado asignado')),
                ('history_user', models.ForeignKey(null=True, on_delete=django.db.models.deletion.SET_NULL, related_name='+', to=settings.AUTH_USER_MODEL)),
                ('marca', models.ForeignKey(blank=True, db_constraint=False, null=True, on_delete=django.db.models.deletion.DO_NOTHING, related_name='+', to='inventory.marca', verbose_name='Marca')),
                ('modelo', models.ForeignKey(blank=True, db_constraint=False, null=True, on_delete=django.db.models.deletion.DO_NOTHING, related_name='+', to='inventory.modelo', verbose_name='Modelo')),
                ('ram', models.ForeignKey(blank=True, db_constraint=False, null=True, on_delete=django.db.models.deletion.DO_NOTHING, related_name='+', to='inventory.ram', verbose_name='RAM')),
            ],
            options={
                'verbose_name': 'historical Celular',
                'verbose_name_plural': 'historical Celulares',
                'ordering': ('-history_date', '-history_id'),
                'get_latest_by': ('history_date', 'history_id'),
            },
            bases=(simple_history.models.HistoricalChanges, models.Model),
        ),
        migrations.CreateModel(
            name='Celular',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('imei', models.CharField(max_length=20, unique=True, verbose_name='IMEI')),
                ('numero_serie', models.CharField(max_length=100, unique=True, verbose_name='Número de serie')),
                ('estado', models.CharField(choices=[('activo', 'Activo'), ('en_reparacion', 'En Reparación'), ('de_baja', 'De Baja')], default='activo', max_length=20, verbose_name='Estado')),
                ('fecha_ingreso', models.DateField(auto_now_add=True, verbose_name='Fecha de ingreso')),
                ('notas', models.TextField(blank=True, default='', verbose_name='Notas adicionales')),
                ('almacenamiento', models.ForeignKey(on_delete=django.db.models.deletion.PROTECT, related_name='celulares', to='inventory.almacenamiento', verbose_name='Almacenamiento')),
                ('empleado_asignado', models.ForeignKey(blank=True, help_text='Dejar en blanco si el equipo está en bodega.', null=True, on_delete=django.db.models.deletion.SET_NULL, related_name='celulares', to='inventory.empleado', verbose_name='Empleado asignado')),
                ('marca', models.ForeignKey(on_delete=django.db.models.deletion.PROTECT, related_name='celulares', to='inventory.marca', verbose_name='Marca')),
                ('modelo', models.ForeignKey(on_delete=django.db.models.deletion.PROTECT, related_name='celulares', to='inventory.modelo', verbose_name='Modelo')),
                ('ram', models.ForeignKey(on_delete=django.db.models.deletion.PROTECT, related_name='celulares', to='inventory.ram', verbose_name='RAM')),
            ],
            options={
                'verbose_name': 'Celular',
                'verbose_name_plural': 'Celulares',
                'ordering': ['-fecha_ingreso'],
            },
        ),
        migrations.AddConstraint(
            model_name='modelo',
            constraint=models.UniqueConstraint(fields=('marca', 'nombre'), name='unique_marca_modelo'),
        ),
    ]
