# Generated by Django 5.1.4 on 2026-04-01 17:11

from django.db import migrations, models


class Migration(migrations.Migration):

    initial = True

    dependencies = [
    ]

    operations = [
        migrations.CreateModel(
            name='LDAPMapping',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('atributo_ldap', models.CharField(help_text='Nombre del atributo en Active Directory (ej: sAMAccountName, department).', max_length=100, unique=True, verbose_name='Atributo LDAP')),
                ('campo_empleado', models.CharField(help_text='Campo del modelo Empleado (ej: username, cargo).', max_length=100, verbose_name='Campo del empleado')),
                ('activo', models.BooleanField(default=True, verbose_name='Activo')),
            ],
            options={
                'verbose_name': 'Mapeo LDAP',
                'verbose_name_plural': 'Mapeos LDAP',
                'ordering': ['atributo_ldap'],
            },
        ),
        migrations.CreateModel(
            name='SyncLog',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('fecha', models.DateTimeField(auto_now_add=True, verbose_name='Fecha de ejecucion')),
                ('tipo_sync', models.CharField(choices=[('MANUAL', 'Manual'), ('AUTOMATICO', 'Automatico'), ('PROGRAMADO', 'Programado')], default='MANUAL', max_length=15, verbose_name='Tipo de sincronizacion')),
                ('estado', models.CharField(choices=[('exitoso', 'Exitoso'), ('parcial', 'Parcial (con errores)'), ('fallido', 'Fallido')], max_length=20, verbose_name='Estado')),
                ('empleados_creados', models.PositiveIntegerField(default=0, verbose_name='Empleados creados')),
                ('empleados_actualizados', models.PositiveIntegerField(default=0, verbose_name='Empleados actualizados')),
                ('empleados_desactivados', models.PositiveIntegerField(default=0, verbose_name='Empleados desactivados')),
                ('empleados_protegidos', models.PositiveIntegerField(default=0, help_text='Empleados que el sync intento desactivar pero no pudo porque tienen equipos asignados (PROTECT).', verbose_name='Empleados protegidos')),
                ('errores', models.TextField(blank=True, default='', verbose_name='Errores')),
                ('duracion_segundos', models.FloatField(default=0, verbose_name='Duracion (segundos)')),
                ('ejecutado_por', models.CharField(blank=True, default='sistema', max_length=150, verbose_name='Ejecutado por')),
            ],
            options={
                'verbose_name': 'Registro de sincronizacion LDAP',
                'verbose_name_plural': 'Registros de sincronizacion LDAP',
                'ordering': ['-fecha'],
            },
        ),
    ]
